--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,12 @@
+
+server:
+  port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/rentmange?serverTimezone=GMT%2B8&amp;useSSL=false
-    data-username: root
-    data-password: mysql
+    url: jdbc:mysql://localhost:3306/rent_manager?serverTimezone=GMT&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: mysql
 
-mybatis:
-  type-aliases-package: com.rent.manager.model
-  configuration:
-    map-underscore-to-camel-case: true
+#mybatis:
+#  mapper-locations: classpath*:com/rent/manager/mapper/xml/*.xml
