--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,10 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/rent_manager?serverTimezone=GMT&useSSL=false
+    url: jdbc:mysql://localhost:3306/rent_manager?serverTimezone=GMT&useSSL=false&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: mysql
+    password: root
 
-#mybatis:
-#  mapper-locations: classpath*:com/rent/manager/mapper/xml/*.xml
+mybatis:
+  mapper-locations: classpath*:com/rent/manager/mapper/xml/*Mapper.xml
