--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
     url: jdbc:mysql://localhost:3306/rent_manager?serverTimezone=GMT&useSSL=false&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: mysql
+    password: root
+#    password: mysql
 
 mybatis:
   mapper-locations: classpath*:com/rent/manager/mapper/xml/*Mapper.xml
